Changed Tag name from root to NearPrime for swagger ui
