# docs/nearestprimes/swagger.json
@@ -31,7 +31,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "NearestPrime"
                 ],
                 "summary": "Show the status of service.",
                 "responses": {
@@ -55,7 +55,7 @@
                     "text/plain"
                 ],
                 "tags": [
-                    "root"
+                    "NearestPrime"
                 ],
                 "summary": "Returns the highest prime number lower than the provided number.",
                 "parameters": [
